documentao da rota de generate token
