# 7-APIS/internal/dto/dto.go
@@ -14,3 +14,7 @@ type GetJWTInput struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
+}
